<resources>
    <string name="app_name">Trace_Android</string>

    <string name="tab1">Feed</string>
    <string name="tab2">My page</string>

    <string name="map_style">
        [
          {
            "featureType": "administrative.land_parcel",
            "stylers": [
              {
                "saturation": -65
              }
            ]
          },
          {
            "featureType": "administrative.land_parcel",
            "elementType": "labels",
            "stylers": [
              {
                "visibility": "off"
              }
            ]
          },
          {
            "featureType": "poi",
            "stylers": [
              {
                "saturation": -30
              }
            ]
          },
          {
            "featureType": "poi",
            "elementType": "labels.text",
            "stylers": [
              {
                "visibility": "off"
              }
            ]
          },
          {
            "featureType": "poi.business",
            "stylers": [
              {
                "visibility": "off"
              }
            ]
          },
          {
            "featureType": "road",
            "stylers": [
              {
                "saturation": -100
              }
            ]
          },
          {
            "featureType": "road",
            "elementType": "labels.icon",
            "stylers": [
              {
                "visibility": "off"
              }
            ]
          },
          {
            "featureType": "road.local",
            "elementType": "labels",
            "stylers": [
              {
                "visibility": "off"
              }
            ]
          },
          {
            "featureType": "transit",
            "stylers": [
              {
                "visibility": "off"
              }
            ]
          },
          {
            "featureType": "water",
            "stylers": [
              {
                "saturation": -65
              }
            ]
          }
        ]
    </string>

    <string name="fab_add_trace">Add My Trace</string>
    <string name="fab_add_trace_description">Add My Trace</string>

    <string name="fab_my_location_description">Come back to my location</string>


    <string name="cancel">Cancel</string>
    <string name="input_bottom_sheet_placeholder">record your own trace</string>
    <string name="calendar_view">calendar_view</string>
    <string name="date_order">date order</string>
    <string name="intro_firstlinegroup_description">Discover other\'s</string>
    <string name="intro_secondlinegroup_description">Leave your</string>
    <string name="intro_titlelinegroup_description"><![CDATA[—> Trace]]></string>
    <string name="btn_email_text">이메일로 계속하기</string>
    <string name="btn_naver_text">네이버 아이디로 계속하기</string>
    <string name="current_location_format">현재좌표: %1$f, %2$f</string>
    <string name="selected_image_description">포스팅을 위한 사진이 들어갈 곳</string>
    <string name="postDetailTitle">Trace</string>

</resources>