<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/design_bottom_sheet"
    android:background="@drawable/rounded_top_background"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextUserInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_bottom_sheet_placeholder"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:backgroundTint="@color/primary"
        android:text="@string/fab_add_trace_description"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/primary"
        style="?attr/borderlessButtonStyle"/>

</LinearLayout>