<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/design_bottom_sheet"
    android:background="@color/white"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp">

    <!-- 상단 타이틀 영역 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleContainer"
        android:background="@color/white"
        android:layout_alignParentTop="true">
        <!-- 취소 버튼 -->
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/primary"
            style="?attr/borderlessButtonStyle"
            android:background="@drawable/button_selector_cancel"
            android:layout_alignParentStart="true"
            android:theme="@style/MediumFont"/>

        <!-- "Add My Trace" 텍스트 -->
        <TextView
            android:id="@+id/textViewAddMyTrace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postDetailTitle"
            android:textSize="16sp"
            android:theme="@style/MediumFont"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"/>
    </RelativeLayout>

    <!-- 구분선 -->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_dark"
        android:layout_below="@id/titleContainer"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/postViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="8dp"
                android:layout_below="@id/textViewCurrentLocation"/>

            <!-- 선택된 이미지 표시 ImageView -->
            <ImageView
                android:id="@+id/postViewImage"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:visibility="gone"
                android:contentDescription="@string/selected_image_description"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"/>

            <TextView
                android:id="@+id/postViewContents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="8dp"
                android:layout_below="@id/textViewCurrentLocation"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>